--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artigo sobre o android</title>
+    <title>Artigo sobre o Android</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="android.css">
 </head>
 <body>
     <header>
-        <h1>Victor henrique - Projeto android</h1>
+        <h1>Victor Henrique - Projeto Android</h1>
     </header>
     <main>
         <aside>
-        <h1>Você ja se perguntou qual foi o processo de criação do mascote do android?</h1>
-        <a href="android.html" target="_next">Clique aqui para ler o artigo!</a>
-            <p>O site que você ira ver a seguir foi criado com base no capitulo 17 do curso de html e css do professor Gustavo Guanabara, criador do Curso em Video.</p>
-            <p>nota de esclarecimeno: os botôes de navegação em cima da página não estão funcionando. Deixei meramente decorativo</p>
-            <p>O site teve algumas alteraçôes minhas.</p>
-            <p>Quer entrar em contato comigo? <a href="https://www.instagram.com/victorhench_/?next=%2F" id="id">📷acesse meu instagram!</a></p>
+            <h2>Você já se perguntou qual foi o processo de criação do mascote do Android?</h2>
+            <a href="android.html" target="_next">Clique aqui para ler o artigo!</a>
+            <p>O site que você irá ver a seguir foi criado com base no capítulo 17 do curso de HTML e CSS do professor Gustavo Guanabara, criador do Curso em Vídeo.</p>
+            <p>Nota de esclarecimento: os botões de navegação em cima da página não estão funcionando. Deixei meramente decorativo.</p>
+            <p>O site teve algumas alterações minhas.</p>
+            <p>Quer entrar em contato comigo? <a href="https://www.instagram.com/victorhench_/?next=%2F" id="id">📷Acesse meu Instagram!</a></p>
         </aside>
     </main>
 </body>
